fix layout bugs

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,7 +11,9 @@ body{
     height:65%;
     width:100%;
 }
-
+h6{
+    padding-top:5px;
+}
 .card-box{
     transition:0.3s;
     widows: 100%;
